# a8n-v2

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7c44edfa2215_update_execution_updated_at_onupdate.py  ec8748f70e4d_create_a_baseline_migrations.py  fix_user_column_names.py
backend/migrations/: env.py
backend/src/app/: main.py
backend/src/app/api/: credentials.py  execution.py  user.py  webhook.py  workflow.py
backend/src/app/controller/: user_controller.py
backend/src/app/core/db/: db.py
backend/src/app/middleware/: auth_middleware.py
backend/src/app/models/: connection.model.py  connection_model.py  credential_model.py  execution_model.py  node.model.py  node_model.py  user.model.py  user_model.py  webhook_model.py  workflow_model.py
backend/src/app/schemas/: connection.schema.py  connection_schema.py  credential.schema.py  credential_schema.py  execution_schema.py  node_schema.py  user.schema.py  user_schema.py  webhook_schema.py  workflow.schema.py  workflow_schema.py
backend/src/app/utils/: auth_utils.py  redis.py
executor-engine/: .env.example  pyproject.toml
executor-engine/src/app/: main.py
executor-engine/src/app/services/: ai_agent_service.py  email_service.py  redis_service.py  telegram_service.py
frontend/: package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/(home)/: layout.tsx
frontend/app/(home)/workflows/: page.tsx
frontend/app/(home)/workflows/[id]/: page.tsx
frontend/components/auth/: AuthCard.tsx  RequireAuth.tsx
frontend/components/providers/: auth-provider.tsx
frontend/components/ui/: app-sidebar.tsx  hero.tsx  marketing-hero.tsx
frontend/components/workflow/: ActionToolbar.tsx  ExecuteButton.tsx  WorkflowPageAppbar.tsx  react-flow.tsx
frontend/components/workflow/nodes/: FirstNode.tsx  MediaTitleNode.tsx
frontend/lib/: axios.ts  utils.ts
