[project]
name = "executor-engine"
version = "0.1.0"
description = ""
authors = [{ name = "sincerelyyyash", email = "yta0088@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi (>=0.116.2,<0.117.0)",
  "uvicorn[standard] (>=0.35.0,<0.36.0)",
  "python-telegram-bot (>=22.4,<23.0)",
  "langgraph (>=0.6.7,<0.7.0)",
  "langchain-google-genai (>=2.1.12,<3.0.0)",
  "aioredis (>=2.0.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "executor_engine", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
